Fixed Popup Being behind carousel

--- a/src/Components/Carousel.css
+++ b/src/Components/Carousel.css
@@ -8,6 +8,7 @@
 .carousel {
     overflow: hidden;
     width: 600px;
+    position: relative;
 }
 
 .wrap {
