--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -59,6 +59,7 @@
 /* Login Modal */
 .modal {
   position: fixed;
+  z-index: 10;
   top: 0;
   left: 0;
   width: 100%;
